--- a/P006687.opf/meta.yml
+++ b/P006687.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P006687
+id: P006687
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN3026
   title: སྔ་འགྱུར་རྙིང་མའི་གླེགས་བམ་རིན་པོ་ཆེ།
-  volume: ''
   author: ''
+  volumes: {}
