--- a/P006687.opf/meta.yml
+++ b/P006687.opf/meta.yml
@@ -4,4 +4,39 @@ source_metadata:
   id: bdr:W3CN3026
   title: སྔ་འགྱུར་རྙིང་མའི་གླེགས་བམ་རིན་པོ་ཆེ།
   author: ''
-  volumes: {}
+  volumes:
+    303ca6df9166405f91d75581dac8f9c0:
+      image_group_id: I3CN3158
+      title: ''
+      volume_number: 1
+      total_pages: 542
+    bc3663f5e5d741c9ae9daeae4d61de37:
+      image_group_id: I3CN3159
+      title: ''
+      volume_number: 2
+      total_pages: 598
+    c784b398da8a459a9eb37a386f3b7e88:
+      image_group_id: I3CN3160
+      title: ''
+      volume_number: 3
+      total_pages: 568
+    d0f54f0f17034af6be4fa62e3971ec97:
+      image_group_id: I3CN3161
+      title: ''
+      volume_number: 4
+      total_pages: 426
+    486c01db5f3d4672a79e619130632695:
+      image_group_id: I3CN3162
+      title: ''
+      volume_number: 5
+      total_pages: 636
+    7d27ccf9271c408abd10522413e3323c:
+      image_group_id: I3CN3163
+      title: ''
+      volume_number: 6
+      total_pages: 550
+    db9e70d6d8894dca8e1eeff1620c92cb:
+      image_group_id: I3CN3164
+      title: ''
+      volume_number: 7
+      total_pages: 582
