--- a/P006687.opf/layers/v001/Pagination.yml
+++ b/P006687.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6c4b02d649134cb8a0518a5ca493cc5f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a2d1d5e4ee194e89a411d0da38354448:
