--- a/P006687.opf/layers/v002/Pagination.yml
+++ b/P006687.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: e3422002665041a7b48d207b86d60b1a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   86011401ea1a48a888bb0827c895ace1:
