--- a/P006687.opf/layers/v003/Pagination.yml
+++ b/P006687.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5564afcd10d94b43971af6be72b30ca2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1130f33cdfc54875b2fa87f196d7f80e:
