--- a/P006687.opf/layers/v004/Pagination.yml
+++ b/P006687.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: 3eed88718ccf4c3f91163236cacf44a8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   33cd9cd0e63241548b1e58b120bcff74:
