--- a/P006687.opf/layers/v005/Pagination.yml
+++ b/P006687.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: e7ea69aaa5a44fafa79a8c0250b6db9f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e2203c881ea344a3854e21f589f98eed:
