--- a/P006687.opf/layers/v006/Pagination.yml
+++ b/P006687.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: 435ee3692cc14183aa1d9f68c5f3c2db
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   5b762a1ac3934c4c978e75e84eaa829e:
