--- a/P006687.opf/layers/v007/Pagination.yml
+++ b/P006687.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: 3f5f3a363b624ac2bb09895d10788f16
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7885e1e83c6d4f2a961117f205bf8aef:
