--- a/P006687.opf/meta.yml
+++ b/P006687.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006687
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W3CN3026
   title: སྔ་འགྱུར་རྙིང་མའི་གླེགས་བམ་རིན་པོ་ཆེ།
