--- a/P006687.opf/meta.yml
+++ b/P006687.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006687
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:15:57.140142
 source_metadata:
   id: bdr:W3CN3026
   title: སྔ་འགྱུར་རྙིང་མའི་གླེགས་བམ་རིན་པོ་ཆེ།
@@ -49,3 +49,5 @@ source_metadata:
       volume_number: 7
       total_pages: 582
       base_file: v007.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
